<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	tools:context=".fragment.AddAccountSaveAccountFragment">

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/information"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/margin"
			android:layout_marginEnd="@dimen/margin"
			android:layout_marginStart="@dimen/margin"
			android:layout_marginTop="@dimen/margin"
			android:textAppearance="@style/TextAppearance.AppCompat.Body1"
			app:layout_constraintBottom_toTopOf="@+id/pin_code_layout"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:text="@string/pin_code_information" />

		<android.support.design.widget.TextInputLayout
			android:id="@+id/pin_code_layout"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/margin"
			android:layout_marginEnd="@dimen/margin"
			android:layout_marginStart="@dimen/margin"
			android:layout_marginTop="@dimen/margin"
			android:hint="@string/pin_code"
			app:counterEnabled="true"
			app:counterMaxLength="@integer/pin_code_max_size"
			app:counterOverflowTextAppearance="@style/TextInputLayoutCounterTextAppearance"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<android.support.design.widget.TextInputEditText
				android:id="@+id/pin_code"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:imeOptions="actionGo"
				android:inputType="number">

				<requestFocus />
			</android.support.design.widget.TextInputEditText>
		</android.support.design.widget.TextInputLayout>

		<Button
			android:id="@+id/back"
			style="@style/Widget.AppCompat.Button.Borderless.Colored"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/margin"
			android:text="@string/back"
			app:layout_constraintBaseline_toBaselineOf="@+id/save"
			app:layout_constraintStart_toStartOf="parent" />

		<Button
			android:id="@+id/save"
			style="@style/Widget.AppCompat.Button.Colored"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/margin"
			android:layout_marginEnd="@dimen/margin"
			android:text="@string/save"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent" />
	</android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
