<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@color/background"
	android:theme="@style/AppTheme"
	tools:context=".fragment.AccountLoginFragment">

	<TextView
		android:id="@+id/title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/margin"
		android:layout_marginTop="@dimen/margin"
		android:text="@string/login_with"
		android:textAppearance="@style/TextAppearance.AppCompat.Title"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/user_id"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/margin_half"
		android:textAppearance="@style/TextAppearance.AppCompat.Title"
		app:layout_constraintBaseline_toBaselineOf="@+id/title"
		app:layout_constraintStart_toEndOf="@+id/title"
		tools:text="abcd1234" />

	<android.support.design.widget.TextInputLayout
		android:id="@+id/pin_code_layout"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="@dimen/margin"
		android:layout_marginStart="@dimen/margin"
		android:layout_marginTop="@dimen/margin"
		android:hint="@string/pin_code"
		app:counterEnabled="true"
		app:counterMaxLength="@integer/pin_code_max_size"
		app:counterOverflowTextAppearance="@style/TextInputLayoutCounterTextAppearance"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/title"
		app:passwordToggleEnabled="true">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/pin_code"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:imeOptions="actionGo"
			android:inputType="numberPassword">

			<requestFocus />
		</android.support.design.widget.TextInputEditText>
	</android.support.design.widget.TextInputLayout>

	<Button
		android:id="@+id/login"
		style="@style/Widget.AppCompat.Button.Borderless.Colored"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/margin"
		android:layout_marginEnd="@dimen/margin"
		android:layout_marginTop="@dimen/margin"
		android:text="@string/login"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/pin_code_layout" />
</android.support.constraint.ConstraintLayout>
